src/objects/Calendar_Event__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <picklist>
            <picklistValues>
                <fullName>Lower Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appelate Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Patent Court (Nullity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Court of Federal Appeals (CAFC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contempt of Court proceedings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI proceedings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Reference_Number__c</fullName>
        <label>File Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Case</label>
        <referenceTo>Legal_Case__c</referenceTo>
        <relationshipLabel>Calendar Events</relationshipLabel>
        <relationshipName>Calendar_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patent</label>
        <referenceTo>Patent__c</referenceTo>
        <relationshipLabel>Calendar Events</relationshipLabel>
        <relationshipName>Calendar_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Calendar Event</label>
    <nameField>
        <displayFormat>CE-{00000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendar Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>